# rust-axum-jwt-auth

./: .env  Cargo.toml  Makefile  README.md  Rust HS256 JWT.postman_collection.json  docker-compose.yml
migrations/: 20230402142655_init.down.sql  20230402142655_init.up.sql
src/: config.rs  handler.rs  jwt_auth.rs  main.rs  model.rs  response.rs  route.rs
